[project]
name = "samsung-health-extractor"
version = "2.0.0"
description = "A script to generate CSV files from Samsung Health data exports"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.17.0",
    "typer>=0.15.0",
    "eliot>=1.15.0",
]

[project.scripts]
samsung-health-extract = "samsung_health_extractor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
]

